# outcome

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  clang_format_test  flake.nix  justfile
bench/: CMakeLists.txt  bench.cpp
data/: outcome.pc.in  outcomeConfig.cmake.in
examples/: CMakeLists.txt  map.cpp
outcome/: outcome.hpp
src/: CMakeLists.txt  outcome.hpp
test/: CMakeLists.txt  tests.cpp
test/static/: CMakeLists.txt
test/unittests/: CMakeLists.txt  map.cpp
